--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ flutter:
      - family: Whisper-Regular
        fonts:
          - asset: assets/fonts/Whisper-Regular.ttf
+     - family: BebasNeue-Regular
+       fonts:
+         - asset: assets/fonts/BebasNeue-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
