--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   simple_gradient_text: ^1.3.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
