--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   simple_gradient_text: ^1.3.0
   url_launcher: ^6.2.2
+  image_network: ^2.5.4+1
 
 dev_dependencies:
   flutter_test:
