--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   simple_gradient_text: ^1.3.0
   url_launcher: ^6.2.2
   image_network: ^2.5.4+1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
