--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.2
   image_network: ^2.5.4+1
   provider: ^6.1.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
