--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_network: ^2.5.4+1
   provider: ^6.1.1
   get: ^4.6.6
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
