--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.1
   get: ^4.6.6
   flutter_bloc: ^8.1.3
+  torch_light: ^1.0.0
 
 dev_dependencies:
   flutter_test:
